--- a/src/MailRu.Marusia.Models.csproj
+++ b/src/MailRu.Marusia.Models.csproj
@@ -12,8 +12,8 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <Language>C#</Language>
     <Title>MailRu.Marusia.Models</Title>
-    <Version>1.3.1</Version>
-    <PackageReleaseNotes>Add meta.interfaces.geolocation_sharing</PackageReleaseNotes>
+    <Version>1.0.0</Version>
+    <PackageReleaseNotes>Models for Marusia from Mail.ru</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
